Fix prettier eslint integration
existing prettier config was broken, removed manual prettier config in favor of projen managed config

--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -170,6 +170,16 @@
         }
       ]
     },
+    "parse-json": {
+      "name": "parse-json",
+      "description": "Parse a DataDog json file into DataDog Typescript compatible json",
+      "steps": [
+        {
+          "exec": "ts-node projenrc/parse-json.ts",
+          "receiveArgs": true
+        }
+      ]
+    },
     "post-compile": {
       "name": "post-compile",
       "description": "Runs after successful compilation",
