--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ junit.xml
 !/.mergify.yml
 !/.github/workflows/upgrade-master.yml
 !/.github/pull_request_template.md
+!/.prettierignore
+!/.prettierrc.json
 !/.npmrc
 !/test/
 !/tsconfig.dev.json
