--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "package": "npx projen package",
     "package-all": "npx projen package-all",
     "package:js": "npx projen package:js",
+    "parse-json": "npx projen parse-json",
     "post-compile": "npx projen post-compile",
     "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
@@ -42,9 +43,11 @@
     "aws-cdk-lib": "2.92.0",
     "constructs": "10.2.69",
     "eslint": "^8",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-import-resolver-node": "^0.3.6",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^5.0.0",
     "jest": "^27",
     "jest-junit": "^15",
     "jsii": "~5.0.0",
@@ -54,7 +57,7 @@
     "jsii-rosetta": "~5.0.0",
     "json-schema-to-typescript": "^13.1.1",
     "npm-check-updates": "^16",
-    "prettier": "^2.4.1",
+    "prettier": "^3.0.0",
     "projen": "0.71.128",
     "standard-version": "^9",
     "ts-jest": "^27",
@@ -66,10 +69,12 @@
     "constructs": "^10.2.69"
   },
   "dependencies": {
-    "camelcase-keys": "^6.2.2"
+    "camelcase-keys": "^6.2.2",
+    "decamelize": "^5.0.1"
   },
   "bundledDependencies": [
-    "camelcase-keys"
+    "camelcase-keys",
+    "decamelize"
   ],
   "keywords": [
     "cdk"
